<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.vernalis.knime</groupId>
    <artifactId>com.vernalis.knime.parent</artifactId>
    <version>${revision}${changelist}</version>
    <packaging>pom</packaging>

    <properties>
        <revision>1.36.7</revision>
        <changelist>-SNAPSHOT</changelist>
        <knime.version>5.3</knime.version>
        <echem.version>5.1</echem.version>
        <java.version>17</java.version>
        <maven.version>3.8.5</maven.version>
        <maven.enforcer.version>3.4.1</maven.enforcer.version>
        <maven.compiler.version>3.11.0</maven.compiler.version>
        <maven.versions.version>2.15.0</maven.versions.version>
        <maven.site.version>4.0.0-M7</maven.site.version>
        <maven.javadoc.version>3.3.1</maven.javadoc.version>
        <maven.plugin.version>3.8.2</maven.plugin.version>
        <maven.project.info.reports.version>3.4.3</maven.project.info.reports.version>
        
        <tycho.version>4.0.8</tycho.version>
        <tycho.extras.version>${tycho.version}</tycho.extras.version>
        <tycho.test.jvmArgs>-Xmx512m</tycho.test.jvmArgs>
    </properties>

    <!-- List the modules of your project here -->
    <modules>
        <!-- Plugins -->
        <module>com.vernalis.knime</module>
        <module>com.vernalis.knime.bio.core</module>
        <module>com.vernalis.knime.bio.speedyseq</module>
        <module>com.vernalis.knime.chem.core</module>
        <module>com.vernalis.knime.chem.mmp</module>
        <module>com.vernalis.knime.chem.pmi</module>
        <module>com.vernalis.knime.chem.speedysmiles</module>
        <module>com.vernalis.knime.chem.rdkit</module>
        <module>com.vernalis.knime.core</module>
        <module>com.vernalis.knime.database</module>
        <module>com.vernalis.knime.database.core</module>
        <module>com.vernalis.knime.db</module>
        <module>com.vernalis.knime.fingerprint</module>
        <module>com.vernalis.knime.flowcontrol</module>
        <module>com.vernalis.knime.io</module>
        <module>com.vernalis.knime.jfcplot.core</module>
        <module>com.vernalis.knime.misc.gc</module>
        <module>com.vernalis.knime.pdbconnector</module>
        <module>com.vernalis.knime.perfmon</module>
        <module>com.vernalis.knime.plot.jfreechart</module>
        <module>com.vernalis.knime.testing</module>
        <module>com.vernalis.knime.testing.core</module>
        <module>com.vernalis.knime.ui</module>
        
        <!-- Test fragments -->
        <module>com.vernalis.knime.database.core.tests</module>
        <module>com.vernalis.knime.db.tests</module>
        <module>com.vernalis.knime.testing.tests</module>

        <!-- Features -->
        <module>com.vernalis.knime.feature</module>
        <module>com.vernalis.knime.testing.feature</module>

        <!-- Update Site -->
        <module>com.vernalis.knime.update</module>
    </modules>

    <!-- List the update sites providing dependencies for your projects here -->
    <repositories>
        <repository>
            <id>p2-knime-update-site</id>
            <layout>p2</layout>
            <url>https://update.knime.com/analytics-platform/${knime.version}</url>
        </repository>
        <repository>
            <id>p2-knime-trusted-community</id>
            <layout>p2</layout>
            <url>https://update.knime.com/community-contributions/trusted/${knime.version}</url>
        </repository>
        <repository>
            <id>3d-e-chem</id>
            <layout>p2</layout>
            <url>https://3d-e-chem.github.io/updates/${echem.version}</url>
        </repository>
    </repositories>

    <profiles>
        <profile>
            <!-- This profile is used on the community server to allow testing with the most recently built rdkit -->
            <id>community-jenkins</id>
            <repositories>
                <repository>
                    <id>rdkit-update-site</id>
                    <layout>p2</layout>
                    <url>file://${project.basedir}/../../../tmp/buckminster.output/site</url>
                </repository>
            </repositories>
        </profile>
    </profiles>


    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>${maven.enforcer.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-maven-plugin</artifactId>
                    <version>${tycho.version}</version>
                    <extensions>true</extensions>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-packaging-plugin</artifactId>
                    <version>${tycho.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>target-platform-configuration</artifactId>
                    <version>${tycho.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-p2-repository-plugin</artifactId>
                    <version>${tycho.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-p2-director-plugin</artifactId>
                    <version>${tycho.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-surefire-plugin</artifactId>
                    <version>${tycho.version}</version>
                    <configuration>
                        <trimStackTrace>false</trimStackTrace>
                        <includes>
                            <include>%regex[.*]</include>
                        </includes>
                        <!-- The following are needed for JDK11 upwards taken from knime.ini -->
                        <argLine>
                            --add-opens=java.security.jgss/sun.security.jgss.krb5=ALL-UNNAMED
                            --add-opens=java.base/sun.security.ssl=ALL-UNNAMED
                            --add-opens=java.base/sun.security.util=ALL-UNNAMED
                            --add-opens=java.base/java.lang=ALL-UNNAMED
                            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
                            --add-opens=java.base/java.net=ALL-UNNAMED
                            --add-opens=java.base/java.nio=ALL-UNNAMED
                            --add-opens=java.base/java.nio.channels=ALL-UNNAMED
                            --add-opens=java.base/java.util=ALL-UNNAMED
                            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
                            --add-opens=java.base/sun.nio=ALL-UNNAMED
                            --add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED
                            --add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED
                            --add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED
                            --add-opens=java.base/java.util.regex=ALL-UNNAMED
                            --add-exports=java.security.jgss/sun.security.jgss=ALL-UNNAMED
                            --add-exports=java.security.jgss/sun.security.jgss.spi=ALL-UNNAMED
                            --add-exports=java.security.jgss/sun.security.krb5.internal=ALL-UNNAMED
                            --add-exports=java.security.jgss/sun.security.krb5=ALL-UNNAMED
                        </argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-buildtimestamp-jgit</artifactId>
                    <version>${tycho.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho.extras</groupId>
                    <artifactId>tycho-eclipserun-plugin</artifactId>
                    <version>${tycho.extras.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho.extras</groupId>
                    <artifactId>tycho-p2-extras-plugin</artifactId>
                    <version>${tycho.extras.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-source-plugin</artifactId>
                    <version>${tycho.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho</groupId>
                    <artifactId>tycho-p2-plugin</artifactId>
                    <version>${tycho.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.tycho.extras</groupId>
                    <artifactId>tycho-dependency-tools-plugin</artifactId>
                    <version>${tycho.version}</version>
                    <executions>
                        <execution>
                            <id>list-dependencies</id>
                            <goals>
                                <goal>list-dependencies</goal>
                            </goals>
                            <phase>compile</phase>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>${maven.version}</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Let us choose the java version to build against -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>

            <!-- Allows to check whether new plugin versions are available-->
            <!-- See https://winterbe.com/posts/2018/08/29/migrate-maven-projects-to-java-11-jigsaw/ -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>${maven.versions.version}</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>
            
            <!-- Make sure Xvfb is running -->
            <!-- See https://stackoverflow.com/a/14727552/6076839 -->
            <!-- plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>start-xvfb</id>
                        <phase>process-test-classes</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <echo message="Starting xvfb ..." />
                                <exec executable="Xvfb" spawn="true">
                                    <arg value=":1" />
                                </exec>
                                <echo message="ArtifactID: ${maven.project.artifactId}" />
                                <echo message="NAME: ${maven.project.name}" />
                            </target>
                        </configuration>
                    </execution>
                    <execution>
                        <id>shutdown-xvfb</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <echo message="Ending xvfb ..." />
                                <exec executable="killall">
                                    <arg value="Xvfb" />
                                </exec>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin -->

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <extensions>true</extensions>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-packaging-plugin</artifactId>
                <dependencies>
                    <dependency>
                        <groupId>org.eclipse.tycho</groupId>
                        <artifactId>tycho-buildtimestamp-jgit</artifactId>
                        <version>${tycho.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <timestampProvider>jgit</timestampProvider>
                    <format>'v'yyyyMMddHHmm</format>
                    <jgit.ignore>
                        pom.xml
                        .polyglot.build.properties
                        .polyglot..META-INF_MANIFEST.MF
                    </jgit.ignore>
                    <jgit.dirtyWorkingTree>warning</jgit.dirtyWorkingTree>
                </configuration>
            </plugin>
            
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-p2-repository-plugin</artifactId>
                <configuration>
                    <skipArchive>true</skipArchive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tycho.version}</version>
                <configuration>
                    <environments>
                        <!-- These can be removed once we shut down the Buckminster build -->
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>win32</os>
                            <ws>win32</ws>
                            <arch>x86_64</arch>
                        </environment>
                        <environment>
                            <os>macosx</os>
                            <ws>cocoa</ws>
                            <arch>x86_64</arch>
                        </environment>
                    </environments>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>plugin-source</id>
                        <goals>
                            <goal>plugin-source</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>feature-source</id>
                        <phase>package</phase>
                        <goals>
                            <goal>feature-source</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <excludes>
                        <!-- List all plug-in that do NOT contain sources here. -->
                        <!-- <plugin id="org.knime.community.template.no-source-files" /> -->
                    </excludes>
                </configuration>
            </plugin>

            <!-- The following is required if source bundles are to be included -->
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-p2-plugin</artifactId>
                <version>${tycho.version}</version>
                <executions>
                    <execution>
                        <id>attach-p2-metadata</id>
                        <phase>package</phase>
                        <goals>
                            <goal>p2-metadata</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>